# skello

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  setup_venv.py
easy_venv/: __init__.py  main.py
src/easy_venv/: __init__.py  __main__.py  cli.py  dependency_handler.py  directory_snapshot.py  file_manager.py  license_helper.py  scaffold_manger.py  shell_launcher.py  utils.py  venv_manager.py
src/easy_venv/models/: cli_handler.py  config.py  scaffold_context.py  scaffolding_types.py
src/easy_venv/templates/: CHANGELOG.md.tmpl  LICENSE_BSD.tmpl  LICENSE_GPL.tmpl  LICENSE_LGPL.tmpl  LICENSE_MIT.tmpl  README.md.tmpl  __init__.py.tmpl  gitignore.tmpl  pyproject.toml.tmpl  requirements.txt.tmpl  test_main.py.tmpl
src/skello/: __init__.py  __main__.py
src/skello/core/: cli.py  scaffold_manager.py
src/skello/core/models/: cli_handler.py  scaffold_context.py
src/skello/services/: dependency_handler.py  shell_launcher.py  venv_manager.py
src/skello/templates/: template_manager.py
src/skello/templates/licenses/: LICENSE_APACHE.tmpl  LICENSE_MPL.tmpl  LICENSE_UNLICENSE.tmpl
src/skello/templates/project/: main.py.tmpl  main__init__.py.tmpl  pyproject.toml.tmpl  test_main.py.tmpl
src/skello/utils/: command_runner.py  directory_snapshot.py  directory_validator.py  license_helper.py
